// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders snapshots with shallow enzyme 1`] = `
<div
  className="App"
>
  <div
    className="App-header"
  >
    <img
      alt="logo"
      className="App-logo"
      src="logo.svg"
    />
    <h2>
      Welcome to React
    </h2>
  </div>
  <p
    className="App-intro"
  >
    <UrlInput
      onChange={[Function]}
      url=""
    />
  </p>
  <div>
    <RequestBodyInput
      onChange={[Function]}
    />
  </div>
  <div>
    <button
      onClick={[Function]}
    >
      Generate Things
    </button>
  </div>
  <div>
    <HttpMethodInput
      httpMethod="GET"
      onChange={[Function]}
    />
  </div>
  <div
    style={
      Object {
        "border": 1,
        "padding": 5,
      }
    }
  >
    <ParameterList
      onChange={[Function]}
      title="Query Parameters"
    />
    <ParameterList
      onChange={[Function]}
      title="Body Parameters"
    />
  </div>
</div>
`;

exports[`renders with react-test-renderer 1`] = `
<div
  className="App"
>
  <div
    className="App-header"
  >
    <img
      alt="logo"
      className="App-logo"
      src="logo.svg"
    />
    <h2>
      Welcome to React
    </h2>
  </div>
  <p
    className="App-intro"
  >
    <label>
      URL
      <input
        onChange={[Function]}
        type="text"
        value=""
      />
    </label>
  </p>
  <div>
    <textarea
      className="App-request-body-input"
      onChange={[Function]}
      type="text"
      value={undefined}
    />
  </div>
  <div>
    <button
      onClick={[Function]}
    >
      Generate Things
    </button>
  </div>
  <div>
    <label>
      Http Method
      <select
        onChange={[Function]}
        value="GET"
      >
        <option
          value="GET"
        >
          GET
        </option>
        <option
          value="POST"
        >
          POST
        </option>
      </select>
    </label>
  </div>
  <div
    style={
      Object {
        "border": 1,
        "padding": 5,
      }
    }
  />
</div>
`;
